[package]
name = "abc002"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc002-a", problem = { platform = "atcoder", contest = "abc002", index = "A", url = "https://atcoder.jp/contests/abc002/tasks/abc002_1" } }
b = { name = "abc002-b", problem = { platform = "atcoder", contest = "abc002", index = "B", url = "https://atcoder.jp/contests/abc002/tasks/abc002_2" } }
c = { name = "abc002-c", problem = { platform = "atcoder", contest = "abc002", index = "C", url = "https://atcoder.jp/contests/abc002/tasks/abc002_3" } }
d = { name = "abc002-d", problem = { platform = "atcoder", contest = "abc002", index = "D", url = "https://atcoder.jp/contests/abc002/tasks/abc002_4" } }

[[bin]]
name = "abc002-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc002-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc002-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc002-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
itertools = "=0.9.0"
