[package]
name = "abc006"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc006-a", problem = { platform = "atcoder", contest = "abc006", index = "A", url = "https://atcoder.jp/contests/abc006/tasks/abc006_1" } }
b = { name = "abc006-b", problem = { platform = "atcoder", contest = "abc006", index = "B", url = "https://atcoder.jp/contests/abc006/tasks/abc006_2" } }
c = { name = "abc006-c", problem = { platform = "atcoder", contest = "abc006", index = "C", url = "https://atcoder.jp/contests/abc006/tasks/abc006_3" } }
d = { name = "abc006-d", problem = { platform = "atcoder", contest = "abc006", index = "D", url = "https://atcoder.jp/contests/abc006/tasks/abc006_4" } }

[[bin]]
name = "abc006-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc006-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc006-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc006-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
num = "0.2.1"
