[package]
name = "abc007"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc007-a", problem = { platform = "atcoder", contest = "abc007", index = "A", url = "https://atcoder.jp/contests/abc007/tasks/abc007_1" } }
b = { name = "abc007-b", problem = { platform = "atcoder", contest = "abc007", index = "B", url = "https://atcoder.jp/contests/abc007/tasks/abc007_2" } }
c = { name = "abc007-c", problem = { platform = "atcoder", contest = "abc007", index = "C", url = "https://atcoder.jp/contests/abc007/tasks/abc007_3" } }
d = { name = "abc007-d", problem = { platform = "atcoder", contest = "abc007", index = "D", url = "https://atcoder.jp/contests/abc007/tasks/abc007_4" } }

[[bin]]
name = "abc007-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc007-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc007-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc007-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
