[package]
name = "abc014"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc014-a", problem = { platform = "atcoder", contest = "abc014", index = "A", url = "https://atcoder.jp/contests/abc014/tasks/abc014_1" } }
b = { name = "abc014-b", problem = { platform = "atcoder", contest = "abc014", index = "B", url = "https://atcoder.jp/contests/abc014/tasks/abc014_2" } }
c = { name = "abc014-c", problem = { platform = "atcoder", contest = "abc014", index = "C", url = "https://atcoder.jp/contests/abc014/tasks/abc014_3" } }
d = { name = "abc014-d", problem = { platform = "atcoder", contest = "abc014", index = "D", url = "https://atcoder.jp/contests/abc014/tasks/abc014_4" } }

[[bin]]
name = "abc014-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc014-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc014-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc014-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
num = "0.2.1"
