[package]
name = "abc049"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc049-a", problem = { platform = "atcoder", contest = "abc049", index = "A", url = "https://atcoder.jp/contests/abc049/tasks/abc049_a" } }
b = { name = "abc049-b", problem = { platform = "atcoder", contest = "abc049", index = "B", url = "https://atcoder.jp/contests/abc049/tasks/abc049_b" } }
c = { name = "abc049-c", problem = { platform = "atcoder", contest = "abc049", index = "C", url = "https://atcoder.jp/contests/abc049/tasks/arc065_a" } }
d = { name = "abc049-d", problem = { platform = "atcoder", contest = "abc049", index = "D", url = "https://atcoder.jp/contests/abc049/tasks/arc065_b" } }

[[bin]]
name = "abc049-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc049-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc049-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc049-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
num = "0.2.1"
