[package]
name = "abc057"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
a = {name = "abc057-a",problem = {platform = "atcoder",contest = "abc057",index = "A"}}
b = {name = "abc057-b",problem = {platform = "atcoder",contest = "abc057",index = "B"}}
c = {name = "abc057-c",problem = {platform = "atcoder",contest = "abc057",index = "C"}}
d = {name = "abc057-d",problem = {platform = "atcoder",contest = "abc057",index = "D"}}
e = {name = "abc057-e",problem = {platform = "atcoder",contest = "abc057",index = "E"}}
f = {name = "abc057-f",problem = {platform = "atcoder",contest = "abc057",index = "F"}}

# dependencies added to new project
[dependencies]
proconio = { version = "0.4.1", features = ["derive"] }

[[bin]]
name = "abc057-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc057-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc057-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc057-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc057-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc057-f"
path = "./src/bin/f.rs"
