[package]
name = "abc057"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc057-a", problem = { platform = "atcoder", contest = "abc057", index = "A", url = "https://atcoder.jp/contests/abc057/tasks/abc057_a" } }
b = { name = "abc057-b", problem = { platform = "atcoder", contest = "abc057", index = "B", url = "https://atcoder.jp/contests/abc057/tasks/abc057_b" } }
c = { name = "abc057-c", problem = { platform = "atcoder", contest = "abc057", index = "C", url = "https://atcoder.jp/contests/abc057/tasks/abc057_c" } }
d = { name = "abc057-d", problem = { platform = "atcoder", contest = "abc057", index = "D", url = "https://atcoder.jp/contests/abc057/tasks/abc057_d" } }

[[bin]]
name = "abc057-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc057-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc057-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc057-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
itertools = "=0.9.0"
