[package]
name = "abc061"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc061-a", problem = { platform = "atcoder", contest = "abc061", index = "A", url = "https://atcoder.jp/contests/abc061/tasks/abc061_a" } }
b = { name = "abc061-b", problem = { platform = "atcoder", contest = "abc061", index = "B", url = "https://atcoder.jp/contests/abc061/tasks/abc061_b" } }
c = { name = "abc061-c", problem = { platform = "atcoder", contest = "abc061", index = "C", url = "https://atcoder.jp/contests/abc061/tasks/abc061_c" } }
d = { name = "abc061-d", problem = { platform = "atcoder", contest = "abc061", index = "D", url = "https://atcoder.jp/contests/abc061/tasks/abc061_d" } }

[[bin]]
name = "abc061-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc061-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc061-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc061-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
