[package]
name = "abc076"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc076-a", problem = { platform = "atcoder", contest = "abc076", index = "A", url = "https://atcoder.jp/contests/abc076/tasks/abc076_a" } }
b = { name = "abc076-b", problem = { platform = "atcoder", contest = "abc076", index = "B", url = "https://atcoder.jp/contests/abc076/tasks/abc076_b" } }
c = { name = "abc076-c", problem = { platform = "atcoder", contest = "abc076", index = "C", url = "https://atcoder.jp/contests/abc076/tasks/abc076_c" } }
d = { name = "abc076-d", problem = { platform = "atcoder", contest = "abc076", index = "D", url = "https://atcoder.jp/contests/abc076/tasks/abc076_d" } }

[[bin]]
name = "abc076-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc076-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc076-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc076-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
num = "0.2.1"
