[package]
name = "abc077"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc077-a", problem = { platform = "atcoder", contest = "abc077", index = "A", url = "https://atcoder.jp/contests/abc077/tasks/abc077_a" } }
b = { name = "abc077-b", problem = { platform = "atcoder", contest = "abc077", index = "B", url = "https://atcoder.jp/contests/abc077/tasks/abc077_b" } }
c = { name = "abc077-c", problem = { platform = "atcoder", contest = "abc077", index = "C", url = "https://atcoder.jp/contests/abc077/tasks/arc084_a" } }
d = { name = "abc077-d", problem = { platform = "atcoder", contest = "abc077", index = "D", url = "https://atcoder.jp/contests/abc077/tasks/arc084_b" } }

[[bin]]
name = "abc077-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc077-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc077-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc077-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
