[package]
name = "abc081"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
a = {name = "abc081-a",problem = {platform = "atcoder",contest = "abc081",index = "A"}}
b = {name = "abc081-b",problem = {platform = "atcoder",contest = "abc081",index = "B"}}
c = {name = "abc081-c",problem = {platform = "atcoder",contest = "abc081",index = "C"}}
d = {name = "abc081-d",problem = {platform = "atcoder",contest = "abc081",index = "D"}}

# dependencies added to new project
[dependencies]
proconio = "*"

[[bin]]
name = "abc081-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc081-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc081-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc081-d"
path = "./src/bin/d.rs"
