[package]
name = "abc081"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc081-a", problem = { platform = "atcoder", contest = "abc081", index = "A", url = "https://atcoder.jp/contests/abc081/tasks/abc081_a" } }
b = { name = "abc081-b", problem = { platform = "atcoder", contest = "abc081", index = "B", url = "https://atcoder.jp/contests/abc081/tasks/abc081_b" } }
c = { name = "abc081-c", problem = { platform = "atcoder", contest = "abc081", index = "C", url = "https://atcoder.jp/contests/abc081/tasks/arc086_a" } }
d = { name = "abc081-d", problem = { platform = "atcoder", contest = "abc081", index = "D", url = "https://atcoder.jp/contests/abc081/tasks/arc086_b" } }

[[bin]]
name = "abc081-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc081-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc081-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc081-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
num = "0.2.1"
