[package]
name = "abc083"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
a = {name = "abc083-a",problem = {platform = "atcoder",contest = "abc083",index = "A"}}
b = {name = "abc083-b",problem = {platform = "atcoder",contest = "abc083",index = "B"}}
c = {name = "abc083-c",problem = {platform = "atcoder",contest = "abc083",index = "C"}}
d = {name = "abc083-d",problem = {platform = "atcoder",contest = "abc083",index = "D"}}

# dependencies added to new project
[dependencies]
proconio = "*"

[[bin]]
name = "abc083-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc083-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc083-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc083-d"
path = "./src/bin/d.rs"
