[package]
name = "abc084"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc084-a", problem = { platform = "atcoder", contest = "abc084", index = "A", url = "https://atcoder.jp/contests/abc084/tasks/abc084_a" } }
b = { name = "abc084-b", problem = { platform = "atcoder", contest = "abc084", index = "B", url = "https://atcoder.jp/contests/abc084/tasks/abc084_b" } }
c = { name = "abc084-c", problem = { platform = "atcoder", contest = "abc084", index = "C", url = "https://atcoder.jp/contests/abc084/tasks/abc084_c" } }
d = { name = "abc084-d", problem = { platform = "atcoder", contest = "abc084", index = "D", url = "https://atcoder.jp/contests/abc084/tasks/abc084_d" } }

[[bin]]
name = "abc084-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc084-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc084-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc084-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
