[package]
name = "abc085"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc085-a", problem = { platform = "atcoder", contest = "abc085", index = "A", url = "https://atcoder.jp/contests/abc085/tasks/abc085_a" } }
b = { name = "abc085-b", problem = { platform = "atcoder", contest = "abc085", index = "B", url = "https://atcoder.jp/contests/abc085/tasks/abc085_b" } }
c = { name = "abc085-c", problem = { platform = "atcoder", contest = "abc085", index = "C", url = "https://atcoder.jp/contests/abc085/tasks/abc085_c" } }
d = { name = "abc085-d", problem = { platform = "atcoder", contest = "abc085", index = "D", url = "https://atcoder.jp/contests/abc085/tasks/abc085_d" } }

[[bin]]
name = "abc085-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc085-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc085-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc085-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
itertools = "=0.9.0"
