[package]
name = "abc086"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
a = {name = "abc086-a",problem = {platform = "atcoder",contest = "abc086",index = "A"}}
b = {name = "abc086-b",problem = {platform = "atcoder",contest = "abc086",index = "B"}}
c = {name = "abc086-c",problem = {platform = "atcoder",contest = "abc086",index = "C"}}
d = {name = "abc086-d",problem = {platform = "atcoder",contest = "abc086",index = "D"}}

# dependencies added to new project
[dependencies]
proconio = "*"

[[bin]]
name = "abc086-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc086-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc086-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc086-d"
path = "./src/bin/d.rs"
