[package]
name = "abc087"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc087-a", problem = { platform = "atcoder", contest = "abc087", index = "A", url = "https://atcoder.jp/contests/abc087/tasks/abc087_a" } }
b = { name = "abc087-b", problem = { platform = "atcoder", contest = "abc087", index = "B", url = "https://atcoder.jp/contests/abc087/tasks/abc087_b" } }
c = { name = "abc087-c", problem = { platform = "atcoder", contest = "abc087", index = "C", url = "https://atcoder.jp/contests/abc087/tasks/arc090_a" } }
d = { name = "abc087-d", problem = { platform = "atcoder", contest = "abc087", index = "D", url = "https://atcoder.jp/contests/abc087/tasks/arc090_b" } }

[[bin]]
name = "abc087-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc087-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc087-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc087-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
num = "0.2.1"
