[package]
name = "abc095"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc095-a", problem = { platform = "atcoder", contest = "abc095", index = "A", url = "https://atcoder.jp/contests/abc095/tasks/abc095_a" } }
b = { name = "abc095-b", problem = { platform = "atcoder", contest = "abc095", index = "B", url = "https://atcoder.jp/contests/abc095/tasks/abc095_b" } }
c = { name = "abc095-c", problem = { platform = "atcoder", contest = "abc095", index = "C", url = "https://atcoder.jp/contests/abc095/tasks/arc096_a" } }
d = { name = "abc095-d", problem = { platform = "atcoder", contest = "abc095", index = "D", url = "https://atcoder.jp/contests/abc095/tasks/arc096_b" } }

[[bin]]
name = "abc095-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc095-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc095-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc095-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
num = "0.2.1"
