[package]
name = "abc106"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc106-a", problem = { platform = "atcoder", contest = "abc106", index = "A", url = "https://atcoder.jp/contests/abc106/tasks/abc106_a" } }
b = { name = "abc106-b", problem = { platform = "atcoder", contest = "abc106", index = "B", url = "https://atcoder.jp/contests/abc106/tasks/abc106_b" } }
c = { name = "abc106-c", problem = { platform = "atcoder", contest = "abc106", index = "C", url = "https://atcoder.jp/contests/abc106/tasks/abc106_c" } }
d = { name = "abc106-d", problem = { platform = "atcoder", contest = "abc106", index = "D", url = "https://atcoder.jp/contests/abc106/tasks/abc106_d" } }

[[bin]]
name = "abc106-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc106-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc106-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc106-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
num = "0.2.1"
