[package]
name = "abc114"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc114-a", problem = { platform = "atcoder", contest = "abc114", index = "A", url = "https://atcoder.jp/contests/abc114/tasks/abc114_a" } }
b = { name = "abc114-b", problem = { platform = "atcoder", contest = "abc114", index = "B", url = "https://atcoder.jp/contests/abc114/tasks/abc114_b" } }
c = { name = "abc114-c", problem = { platform = "atcoder", contest = "abc114", index = "C", url = "https://atcoder.jp/contests/abc114/tasks/abc114_c" } }
d = { name = "abc114-d", problem = { platform = "atcoder", contest = "abc114", index = "D", url = "https://atcoder.jp/contests/abc114/tasks/abc114_d" } }

[[bin]]
name = "abc114-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc114-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc114-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc114-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
