[package]
name = "abc120"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
a = {name = "abc120-a",problem = {platform = "atcoder",contest = "abc120",index = "A"}}
b = {name = "abc120-b",problem = {platform = "atcoder",contest = "abc120",index = "B"}}
c = {name = "abc120-c",problem = {platform = "atcoder",contest = "abc120",index = "C"}}
d = {name = "abc120-d",problem = {platform = "atcoder",contest = "abc120",index = "D"}}
e = {name = "abc120-e",problem = {platform = "atcoder",contest = "abc120",index = "E"}}
f = {name = "abc120-f",problem = {platform = "atcoder",contest = "abc120",index = "F"}}

# dependencies added to new project
[dependencies]
proconio = { version = "0.4.1", features = ["derive"] }

[[bin]]
name = "abc120-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc120-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc120-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc120-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc120-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc120-f"
path = "./src/bin/f.rs"
