[package]
name = "abc120"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc120-a", problem = { platform = "atcoder", contest = "abc120", index = "A", url = "https://atcoder.jp/contests/abc120/tasks/abc120_a" } }
b = { name = "abc120-b", problem = { platform = "atcoder", contest = "abc120", index = "B", url = "https://atcoder.jp/contests/abc120/tasks/abc120_b" } }
c = { name = "abc120-c", problem = { platform = "atcoder", contest = "abc120", index = "C", url = "https://atcoder.jp/contests/abc120/tasks/abc120_c" } }
d = { name = "abc120-d", problem = { platform = "atcoder", contest = "abc120", index = "D", url = "https://atcoder.jp/contests/abc120/tasks/abc120_d" } }

[[bin]]
name = "abc120-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc120-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc120-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc120-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
