[package]
name = "abc122"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc122-a", problem = { platform = "atcoder", contest = "abc122", index = "A", url = "https://atcoder.jp/contests/abc122/tasks/abc122_a" } }
b = { name = "abc122-b", problem = { platform = "atcoder", contest = "abc122", index = "B", url = "https://atcoder.jp/contests/abc122/tasks/abc122_b" } }
c = { name = "abc122-c", problem = { platform = "atcoder", contest = "abc122", index = "C", url = "https://atcoder.jp/contests/abc122/tasks/abc122_c" } }
d = { name = "abc122-d", problem = { platform = "atcoder", contest = "abc122", index = "D", url = "https://atcoder.jp/contests/abc122/tasks/abc122_d" } }

[[bin]]
name = "abc122-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc122-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc122-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc122-d"
path = "src/bin/d.rs"
[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
itertools = "=0.9.0"
