[package]
name = "abc128"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc128-a", problem = { platform = "atcoder", contest = "abc128", index = "A", url = "https://atcoder.jp/contests/abc128/tasks/abc128_a" } }
b = { name = "abc128-b", problem = { platform = "atcoder", contest = "abc128", index = "B", url = "https://atcoder.jp/contests/abc128/tasks/abc128_b" } }
c = { name = "abc128-c", problem = { platform = "atcoder", contest = "abc128", index = "C", url = "https://atcoder.jp/contests/abc128/tasks/abc128_c" } }
d = { name = "abc128-d", problem = { platform = "atcoder", contest = "abc128", index = "D", url = "https://atcoder.jp/contests/abc128/tasks/abc128_d" } }
e = { name = "abc128-e", problem = { platform = "atcoder", contest = "abc128", index = "E", url = "https://atcoder.jp/contests/abc128/tasks/abc128_e" } }
f = { name = "abc128-f", problem = { platform = "atcoder", contest = "abc128", index = "F", url = "https://atcoder.jp/contests/abc128/tasks/abc128_f" } }

[[bin]]
name = "abc128-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc128-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc128-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc128-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc128-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc128-f"
path = "src/bin/f.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
