[package]
name = "abc130"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc130-a", problem = { platform = "atcoder", contest = "abc130", index = "A", url = "https://atcoder.jp/contests/abc130/tasks/abc130_a" } }
b = { name = "abc130-b", problem = { platform = "atcoder", contest = "abc130", index = "B", url = "https://atcoder.jp/contests/abc130/tasks/abc130_b" } }
c = { name = "abc130-c", problem = { platform = "atcoder", contest = "abc130", index = "C", url = "https://atcoder.jp/contests/abc130/tasks/abc130_c" } }
d = { name = "abc130-d", problem = { platform = "atcoder", contest = "abc130", index = "D", url = "https://atcoder.jp/contests/abc130/tasks/abc130_d" } }
e = { name = "abc130-e", problem = { platform = "atcoder", contest = "abc130", index = "E", url = "https://atcoder.jp/contests/abc130/tasks/abc130_e" } }
f = { name = "abc130-f", problem = { platform = "atcoder", contest = "abc130", index = "F", url = "https://atcoder.jp/contests/abc130/tasks/abc130_f" } }

[[bin]]
name = "abc130-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc130-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc130-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc130-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc130-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc130-f"
path = "src/bin/f.rs"
[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
itertools = "=0.9.0"
