[package]
name = "abc131"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc131-a", problem = { platform = "atcoder", contest = "abc131", index = "A", url = "https://atcoder.jp/contests/abc131/tasks/abc131_a" } }
b = { name = "abc131-b", problem = { platform = "atcoder", contest = "abc131", index = "B", url = "https://atcoder.jp/contests/abc131/tasks/abc131_b" } }
c = { name = "abc131-c", problem = { platform = "atcoder", contest = "abc131", index = "C", url = "https://atcoder.jp/contests/abc131/tasks/abc131_c" } }
d = { name = "abc131-d", problem = { platform = "atcoder", contest = "abc131", index = "D", url = "https://atcoder.jp/contests/abc131/tasks/abc131_d" } }
e = { name = "abc131-e", problem = { platform = "atcoder", contest = "abc131", index = "E", url = "https://atcoder.jp/contests/abc131/tasks/abc131_e" } }
f = { name = "abc131-f", problem = { platform = "atcoder", contest = "abc131", index = "F", url = "https://atcoder.jp/contests/abc131/tasks/abc131_f" } }

[[bin]]
name = "abc131-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc131-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc131-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc131-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc131-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc131-f"
path = "src/bin/f.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
num = "0.2.1"
