[package]
name = "abc132"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc132-a", problem = { platform = "atcoder", contest = "abc132", index = "A", url = "https://atcoder.jp/contests/abc132/tasks/abc132_a" } }
b = { name = "abc132-b", problem = { platform = "atcoder", contest = "abc132", index = "B", url = "https://atcoder.jp/contests/abc132/tasks/abc132_b" } }
c = { name = "abc132-c", problem = { platform = "atcoder", contest = "abc132", index = "C", url = "https://atcoder.jp/contests/abc132/tasks/abc132_c" } }
d = { name = "abc132-d", problem = { platform = "atcoder", contest = "abc132", index = "D", url = "https://atcoder.jp/contests/abc132/tasks/abc132_d" } }
e = { name = "abc132-e", problem = { platform = "atcoder", contest = "abc132", index = "E", url = "https://atcoder.jp/contests/abc132/tasks/abc132_e" } }
f = { name = "abc132-f", problem = { platform = "atcoder", contest = "abc132", index = "F", url = "https://atcoder.jp/contests/abc132/tasks/abc132_f" } }

[[bin]]
name = "abc132-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc132-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc132-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc132-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc132-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc132-f"
path = "src/bin/f.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
