[package]
name = "abc135"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
a = {name = "abc135-a",problem = {platform = "atcoder",contest = "abc135",index = "A"}}
b = {name = "abc135-b",problem = {platform = "atcoder",contest = "abc135",index = "B"}}
c = {name = "abc135-c",problem = {platform = "atcoder",contest = "abc135",index = "C"}}
d = {name = "abc135-d",problem = {platform = "atcoder",contest = "abc135",index = "D"}}
e = {name = "abc135-e",problem = {platform = "atcoder",contest = "abc135",index = "E"}}
f = {name = "abc135-f",problem = {platform = "atcoder",contest = "abc135",index = "F"}}

# dependencies added to new project
[dependencies]
proconio = { version = "0.4.1", features = ["derive"] }
itertools = "0.8.2"

[[bin]]
name = "abc135-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc135-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc135-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc135-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc135-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc135-f"
path = "./src/bin/f.rs"
